# docstrap

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  docstrap.example.yaml  pyproject.toml
.github/workflows/: publish.yml  tag-publish.yml  test.yml
scripts/: update_version.py
src/docstrap/: __init__.py  cli.py
src/docstrap/config/: __init__.py  loader.py  models.py  template.py
src/docstrap/core/: __init__.py  formatter.py  manager.py  mkdocs.py
src/docstrap/fs/: __init__.py  handler.py  migrator.py
src/docstrap/utils/: __init__.py  logging.py
tests/: conftest.py  test_cli.py  utils.py
tests/config/: test_loader.py  test_models.py
tests/core/: __init__.py  test_formatter.py  test_manager.py  test_mkdocs.py
tests/fs/: test_handler.py  test_migrator.py
