[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "docstrap"
version = "v0.1.1"
description = "A tool for bootstrapping and managing documentation project structures"
authors = [ "Tom Cunliffe <tom.cunliffe@onoclea.io>",]
license = "MIT"
homepage = "https://github.com/tjcunliffe/docstrap"
repository = "https://github.com/tjcunliffe/docstrap"
documentation = "https://github.com/tjcunliffe/docstrap"
readme = "README.md"
keywords = [ "documentation", "bootstrap", "scaffold", "structure", "generator",]
classifiers = [ "Development Status :: 3 - Alpha", "Environment :: Console", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Documentation", "Topic :: Software Development :: Documentation", "Topic :: Software Development :: Libraries :: Python Modules", "Typing :: Typed",]
[[tool.poetry.packages]]
include = "docstrap"
from = "src"

[tool.black]
line-length = 88
target-version = [ "py39",]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
types-PyYAML = "^6.0.12.12"

[tool.poetry.scripts]
docstrap = "docstrap.cli:main"

[tool.pylint.messages_control]
disable = [ "C0111", "R0903",]

[tool.pylint.format]
max-line-length = 88

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
toml = "^0.10.2"
